--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\pdkainth\\BattleShip\\BattleShip","type":"PROJECT","hints":{"PROJECT_NAME":"BattleShip"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_192","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
